--- a/style.css
+++ b/style.css
@@ -544,10 +544,10 @@ button:hover {
   }
 
   .right-section{
-    height: 300px;
-    margin-top: -80px;
+    height: 500px;
       width: 100%;
       padding: 10px;
+      margin-bottom: 700px;
 
   }
 
