--- a/style.css
+++ b/style.css
@@ -537,14 +537,14 @@ button:hover {
   .left-section {
     width: 100%;
     padding: 10px;
-    height: auto; /* Set auto height so it adjusts based on content */
+    height: 200px; /* Set auto height so it adjusts based on content */
    margin-top: 20px;
   }
 
   .right-section {
     width: 100%;
     padding: 10px;
-    height: auto; /* Set auto height to allow the form to fully display */
+    height: 200px; /* Set auto height to allow the form to fully display */
   }
 
   .form-container {
